--- a/add-in.html
+++ b/add-in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
 <!-- Last Published: Fri Mar 06 2015 19:55:28 GMT+0000 (UTC) -->
-<html data-wf-site="54ee8698c09fb76b2c4ea376" data-wf-page="54ee8698c09fb76b2c4ea377">
+<html>
 <head>
   <meta charset="utf-8">
   <title>helion-add-in-ecosystem</title>
@@ -11,8 +11,8 @@
   <link rel="stylesheet" type="text/css" href="css/webflow.css">
   <link rel="stylesheet" type="text/css" href="css/helion-add-in-ecosystem.webflow.css">
   <script type="text/javascript" src="js/modernizr.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico">
-  <link rel="apple-touch-icon" href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png">
+   <link rel="shortcut icon" type="image/x-icon" href="images/hphelionfav.png">
+  <link rel="apple-touch-icon" href="images/hphelionfav.png">
 </head>
 <body>
   <div class="menu slide-menu-left">
