Changes to add index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="close-menu">&larr; Close</button>
       <h4>Dashboards</h4>
       <nav>
-        <a href="dashboard.html"><img src="images/overview.png" width="29"/> Overview</a>
+        <a href="index.html"><img src="images/overview.png" width="29"/> Overview</a>
         <a href="#"><img src="images/quotas.png" width="29"/>Project Quotas</a>
         <a href="#"><img src="images/allocations.png" width="29"/>Allocations</a>
       </nav>
