changes to gh-pages

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
 </head>
 <body class="dashboard">
   <div class="menu slide-menu-left">
-      <button class="close-menu">&larr; Close</button>
+      <button class="close-menu">Close</button>
       <h4>Dashboards</h4>
       <nav>
         <a href="dashboard.html"><img src="images/overview.png" width="29"/> Overview</a>
