--- a/add-in.html
+++ b/add-in.html
@@ -22,6 +22,7 @@
         <a href="index.html"><img src="images/overview.png" width="29"/> Overview</a>
         <a href="#"><img src="images/quotas.png" width="29"/>Project Quotas</a>
         <a href="#"><img src="images/allocations.png" width="29"/>Allocations</a>
+        <a href="development-platform-dashboard.html"><img src="images/devplat.png" width="29"/>Development Platform</a>
       </nav>
       <h4>Compute</h4>
       <nav>
@@ -254,6 +255,7 @@
                             <a class="w-inline-block action-link" href="#">
                               <img src="images/remove.png" width="24">Remove
                             </a>
+                          </div>
                       </td>
                     </tr>
                     <tr>
@@ -263,7 +265,12 @@
                       <td>3.5 GB</td>
                       <td><img src="images/3.png" width="16"/>Installed</td>
                       <td><img src="images/3.png" width="16"/>Current</td>
-                      <td>...</td>
+                      <td>
+                        <a href="#" data-ix="show-toggle-Tablemenus">
+                          <img src="images/dots.png">
+                        </a>
+
+                      </td>
                     </tr>
                     <tr>
                       <td><a href="#">Office365</a></td>
@@ -276,6 +283,7 @@
                     </tr>
                   </tbody>
                 </table>
+
               </div>
             </div>
             <div class="w-tab-pane" data-w-tab="Applications">
@@ -288,6 +296,22 @@
           </div>
         </div>
       </div>
+<div class="toggleTablemenu" data-ix="display-none-on-load">
+                            <a class="w-inline-block action-link" href="idol_details.html">
+                              <img src="images/usage.png" width="24"> View Usage
+                            </a>
+                            <a class="w-inline-block action-link" href="#">
+                              <img src="images/manage.png" width="24">Manage
+                            </a>
+                            <a class="w-inline-block action-link" href="#">
+                              <img src="images/download.png" width="24">  Download update
+                            </a>
+                            <a class="w-inline-block action-link" href="#">
+                              <img src="images/remove.png" width="24">Remove
+                            </a>
+                          </div>
+
+      
     </div>
     <div class="w-container tiles-container">
       <div class="w-clearfix tiles">
