--- a/development-platform-dashboard.html
+++ b/development-platform-dashboard.html
@@ -71,13 +71,13 @@
         <img src="images/helion-logo.png" width="216"/>
       </a>
       <nav class="w-nav-menu nav-menu" role="navigation">
-        <a class="w-nav-link nav-link" href="#search">
+        <a class="w-nav-link nav-link" href="#">
           <img src="images/search.png" width="22"/>
         </a>
-        <a class="w-nav-link nav-link" href="#help">
+        <a class="w-nav-link nav-link" href="#">
           <img src="images/help.png" width="22"/>
         </a>
-        <a class="w-nav-link nav-link" href="#alerts">
+        <a class="w-nav-link nav-link" href="#">
           <img src="images/alerts.png" width="22"/> 
         </a>
         <a class="w-nav-link nav-link" href="#">
