--- a/development-platform-dashboard.html
+++ b/development-platform-dashboard.html
@@ -22,7 +22,9 @@
         <a href="index.html"><img src="images/overview.png" width="29"/> Overview</a>
         <a href="#"><img src="images/quotas.png" width="29"/>Project Quotas</a>
         <a href="#"><img src="images/allocations.png" width="29"/>Allocations</a>
-        <a href="development-platform-dashboard.html"><img src="images/devplat.png" width="29"/>Development Platform</a>
+        <a href="development-platform-dashboard.html">
+          <img src="images/devplat-opt.png" width="29"/>Development Platform
+        </a>
 
       </nav>
       <h4>Compute</h4>
