--- a/idol_details.html
+++ b/idol_details.html
@@ -292,23 +292,16 @@
     <div class="w-row footer-content-1">
       <div class="w-col w-col-3">
         <ul class="w-list-unstyled footer-list">
-          <li><a class="footer-link" href="#">Support</a>
-          </li>
-          <li><a class="footer-link" href="#">Documentation</a>
-          </li>
-          <li><a class="footer-link" href="#">Community Forums</a>
-          </li>
-          <li><a class="footer-link" href="#">Email Us</a>
-          </li>
-          <li><a class="footer-link" href="#">Chat With Us</a>
-          </li>
+          <li><a class="footer-link" href="#">Support</a></li>
+          <li><a class="footer-link" href="#">Documentation</a></li>
+          <li><a class="footer-link" href="#">Community Forums</a></li>
+          <li><a class="footer-link" href="#">Email Us</a></li>
+          <li><a class="footer-link" href="#">Chat With Us</a></li>
           <li>In the U.S.
-            <br><a class="footer-link" href="#">1-855-61CLOUD</a>
-          </li>
+            <br><a class="footer-link" href="#">1-855-61CLOUD</a></li>
           <li>Worldwide
             <a class="footer-link" href="#">
-              <br xmlns="http://www.w3.org/1999/xhtml">+1678-745-9010</a>
-          </li>
+              <br xmlns="http://www.w3.org/1999/xhtml">+1678-745-9010</a></li>
         </ul>
       </div>
       <div class="w-col w-col-3">
