--- a/infrastructure.html
+++ b/infrastructure.html
@@ -427,39 +427,26 @@
     <div class="w-row footer-content-1">
       <div class="w-col w-col-3">
         <ul class="w-list-unstyled footer-list">
-          <li><a class="footer-link" href="#">Support</a>
-          </li>
-          <li><a class="footer-link" href="#">Documentation</a>
-          </li>
-          <li><a class="footer-link" href="#">Community Forums</a>
-          </li>
-          <li><a class="footer-link" href="#">Email Us</a>
-          </li>
-          <li><a class="footer-link" href="#">Chat With Us</a>
-          </li>
+          <li><a class="footer-link" href="#">Support</a></li>
+          <li><a class="footer-link" href="#">Documentation</a></li>
+          <li><a class="footer-link" href="#">Community Forums</a></li>
+          <li><a class="footer-link" href="#">Email Us</a></li>
+          <li><a class="footer-link" href="#">Chat With Us</a></li>
           <li>In the U.S.
-            <br><a class="footer-link" href="#">1-855-61CLOUD</a>
-          </li>
+            <br><a class="footer-link" href="#">1-855-61CLOUD</a></li>
           <li>Worldwide
             <a class="footer-link" href="#">
-              <br xmlns="http://www.w3.org/1999/xhtml">+1678-745-9010</a>
-          </li>
+              <br xmlns="http://www.w3.org/1999/xhtml">+1678-745-9010</a></li>
         </ul>
       </div>
       <div class="w-col w-col-3">
         <ul class="w-list-unstyled footer-list">
-          <li><a class="footer-link" href="#">About HP Helion</a>
-          </li>
-          <li><a class="footer-link" href="#">Contact US</a>
-          </li>
-          <li><a class="footer-link" href="#">Events</a>
-          </li>
-          <li><a class="footer-link" href="#">Partners</a>
-          </li>
-          <li><a class="footer-link" href="#">Accessibility</a>
-          </li>
-          <li><a class="footer-link" href="#">Careers</a>
-          </li>
+          <li><a class="footer-link" href="#">About HP Helion</a></li>
+          <li><a class="footer-link" href="#">Contact US</a></li>
+          <li><a class="footer-link" href="#">Events</a></li>
+          <li><a class="footer-link" href="#">Partners</a></li>
+          <li><a class="footer-link" href="#">Accessibility</a></li>
+          <li><a class="footer-link" href="#">Careers</a></li>
         </ul>
       </div>
       <div class="w-col w-col-3">
@@ -488,7 +475,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
    <script src="js/classie.js"></script>
-<script src="js/nav.js"></script>
+    <script src="js/nav.js"></script>
   <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 </html>
