--- a/databases.html
+++ b/databases.html
@@ -190,7 +190,7 @@
               </div>
             </div>
             <div class="w-tab-pane w--tab-active" data-w-tab="Tab 2">
-              <a class="w-inline-block button" href="#" data-ix="launch-modal-wizard"><img class="button-icon" src="images/launch-cluster.png" width="30" alt="55033de65f1c768a0cb5c3dc_launch-cluster.png">
+              <a class="w-inline-block button" href="#" data-ix="launch-modal-wizard"><img class="button-icon" src="images/launch-cluster.png" width="30">
                 <div class="button-text">Launch&nbsp;Instance</div>
               </a>
               <div class="w-embed tab-table">
