--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           </div>
         </div>
 
- <div class="add-in-tile">
+        <div class="add-in-tile">
           <h3 class="catalog-header">Volumes</h3>
           <p class="catalog-text" style="background:url(images/u174.png) no-repeat center center;background-size:166px 166px;">
             300
@@ -429,7 +429,7 @@
       </div>
       <div class="w-col w-col-3">
         <ul class="w-list-unstyled footer-list">
-          <li><a class="footer-link" href="#">About HP&nbsp;Helion</a></li>
+          <li><a class="footer-link" href="#">About HP Helion</a></li>
           <li><a class="footer-link" href="#">Contact US</a></li>
           <li><a class="footer-link" href="#">Events</a></li>
           <li><a class="footer-link" href="#">Partners</a></li>
@@ -438,7 +438,7 @@
         </ul>
       </div>
       <div class="w-col w-col-3">
-        <p class="footer-list">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
+        <p class="footer-list">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
       </div>
       <div class="w-col w-col-3">
         <p class="footer-list">@hphelioncloud</p>
